--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "react": "16.3.2",
     "react-360": "~1.1.0",
+    "react-360-gaze-button": "^1.0.0",
     "react-360-web": "~1.1.0",
     "react-dom": "^16.3.2",
     "react-native": "~0.55.4",
+    "simple-raycaster": "^1.1.0",
     "three": "^0.87.0"
   },
   "devDependencies": {
