--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-360": "~1.1.0",
     "react-360-web": "~1.1.0",
     "react-dom": "^16.3.2",
+    "react-gradient": "^1.0.2",
     "react-native": "~0.55.4",
+    "react-native-image-gradient": "^2.2.5",
+    "react-native-linear-gradient": "^2.5.6",
     "three": "^0.87.0"
   },
   "devDependencies": {
