--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "particlesjs": "^2.2.3",
     "react": "16.3.2",
     "react-360": "~1.1.0",
     "react-360-gaze-button": "^1.0.0",
